--- a/index-START.html
+++ b/index-START.html
@@ -182,6 +182,15 @@
     </li>
   </ul>
 <script>
+  const timeNodes = [...document.querySelectorAll("[data-time]")];
+  console.log(timeNodes);
+
+  const seconds = timeNodes
+    .map(node => node.dataset.time)
+    .map(timeCode => {
+      const [mins, secs] = timeCode.split(':');
+      console.log(mins, secs);
+    })
 </script>
 </body>
 </html>
